// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableFormatter > Advanced Formatting and Dynamic Styles > should handle per-column padding overrides 1`] = `
"┌────┬─────────────────────────────────────────────────────┬───────┐
│ id │   name                                              │ price │
├────┼─────────────────────────────────────────────────────┼───────┤
│ 1  │   A very long item name that will need truncation   │ 12.99 │
│ 2  │   Short name                                        │ 5     │
└────┴─────────────────────────────────────────────────────┴───────┘"
`;

exports[`TableFormatter > Responsive Layout (Flexbox & Sizing) > should correctly handle a complex scenario with all constraints 1`] = `
"┌─────────────────┬───────────────┬───────────────────────────────┬────────────┐
│ a               │ b             │ c                             │ d          │
├─────────────────┼───────────────┼───────────────────────────────┼────────────┤
│ short           │ medium length │ c                             │ d          │
└─────────────────┴───────────────┴───────────────────────────────┴────────────┘"
`;

exports[`TableFormatter > Responsive Layout (Flexbox & Sizing) > should divide extra space proportionally among flexGrow columns 1`] = `
"┌────┬─────────────────────────────────────────────────────────────────────────────┬───────┬───────────────────────────┐
│ id │ name                                                                        │ price │ category                  │
├────┼─────────────────────────────────────────────────────────────────────────────┼───────┼───────────────────────────┤
│  1 │ A very long item name that will need truncation                             │ 12.99 │ Electronics               │
│  2 │ Short name                                                                  │     5 │ Groceries                 │
└────┴─────────────────────────────────────────────────────────────────────────────┴───────┴───────────────────────────┘"
`;

exports[`TableFormatter > Responsive Layout (Flexbox & Sizing) > should expand a flexGrow column to fill available space 1`] = `
"┌────┬───────────────────────────────────────────────────────────────────────┬───────┬─────────────┐
│ id │ name                                                                  │ price │ category    │
├────┼───────────────────────────────────────────────────────────────────────┼───────┼─────────────┤
│ 1  │ A very long item name that will need truncation                       │ 12.99 │ Electronics │
│ 2  │ Short name                                                            │     5 │ Groceries   │
└────┴───────────────────────────────────────────────────────────────────────┴───────┴─────────────┘"
`;

exports[`TableFormatter > Responsive Layout (Flexbox & Sizing) > should not let a flexGrow column exceed its maxWidth 1`] = `
"┌────┬──────────────────────────────────────────────────────────────────────────────────┬───────┬──────────────────────┐
│ id │ name                                                                             │ price │ category             │
├────┼──────────────────────────────────────────────────────────────────────────────────┼───────┼──────────────────────┤
│ 1  │ A very long item name that will need truncation                                  │ 12.99 │ Electronics          │
│ 2  │ Short name                                                                       │     5 │ Groceries            │
└────┴──────────────────────────────────────────────────────────────────────────────────┴───────┴──────────────────────┘"
`;

exports[`TableFormatter > Responsive Layout (Flexbox & Sizing) > should shrink columns to fit maxWidth while respecting minWidth 1`] = `
"┌───┬─────────────────────────────────────┬────────────┬───┐
│ … │ name                                │ price      │ … │
├───┼─────────────────────────────────────┼────────────┼───┤
│ 1 │ A very long item name that will ne… │ 12.99      │ … │
│ 2 │ Short name                          │ 5          │ … │
└───┴─────────────────────────────────────┴────────────┴───┘"
`;

exports[`TableFormatter > should align text correctly 1`] = `
"┌────┬─────────────────────────────────────────────────┬───────┐
│ id │ name                                            │ price │
├────┼─────────────────────────────────────────────────┼───────┤
│ 1  │ A very long item name that will need truncation │ 12.99 │
│ 2  │ Short name                                      │     5 │
└────┴─────────────────────────────────────────────────┴───────┘"
`;

exports[`TableFormatter > should handle rowLimit and rowOffset 1`] = `
"┌────┬────────────┬───────┐
│ id │ name       │ price │
├────┼────────────┼───────┤
│ 2  │ Short name │ 5     │
└────┴────────────┴───────┘"
`;

exports[`TableFormatter > should render a basic table correctly 1`] = `
"┌────┬─────────────────────────────────────────────────┬───────┐
│ id │ name                                            │ price │
├────┼─────────────────────────────────────────────────┼───────┤
│ 1  │ A very long item name that will need truncation │ 12.99 │
│ 2  │ Short name                                      │ 5     │
└────┴─────────────────────────────────────────────────┴───────┘"
`;

exports[`TableFormatter > should truncate text when maxWidth is exceeded 1`] = `
"┌───┬──────────────────────────────┬───┐
│ … │ name                         │ … │
├───┼──────────────────────────────┼───┤
│ 1 │ A very long item name that … │ … │
│ 2 │ Short name                   │ 5 │
└───┴──────────────────────────────┴───┘"
`;
